Fix accessibility issues

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,16 +21,18 @@ const activeAnchor = (link: string) => {
 <div
   class="min-h-[153px] sm:min-h-[273px] flex justify-center w-full relative z-10 mt-6 sm:mt-12 mb-4 sm:mb-8"
 >
-  <a class="block mx-auto sm:w-2/3 lg:w-2/5 z-0 peer" href="/">
-    <Image
-      src="https://ik.imagekit.io/thegoldendino/hfw/2023/logo-2023_zZNEDpiqu.png?ik-sdk-version=javascript-1.4.3&updatedAt=1668291679349"
-      alt="HONK! Fest West"
-      format="png"
-      width="557"
-      aspectRatio="427:199"
-      class="w-auto mx-auto hover:transition ease-in hover:scale-105"
-    />
-  </a>
+  <h1 class="w-full">
+    <a class="block mx-auto sm:w-2/3 lg:w-2/5 z-0 peer" href="/">
+      <Image
+        src="https://ik.imagekit.io/thegoldendino/hfw/2023/logo-2023_zZNEDpiqu.png?ik-sdk-version=javascript-1.4.3&updatedAt=1668291679349"
+        alt="HONK! Fest West"
+        format="png"
+        width="557"
+        aspectRatio="427:199"
+        class="w-auto mx-auto hover:transition ease-in hover:scale-105"
+      />
+    </a>
+  </h1>
 </div>
 
 <nav class="w-full pb-8">
