--- a/src/components/home/GivingTuesday.astro
+++ b/src/components/home/GivingTuesday.astro
@@ -5,6 +5,7 @@ import Title from '@components/Title.astro';
 
 <div class="flex-none sm:pr-6 mb-3 sm:mb-0 z-10 flex justify-center">
   <iframe
+    title="HONK! Fest West Donation Widget"
     width="300"
     height="500"
     src="https://www.wagives.org/forms/honk-fest-west?id=ajcqcf&embed=donation_widget"
