--- a/src/pages/donate/index.astro
+++ b/src/pages/donate/index.astro
@@ -51,6 +51,7 @@ import Notion from '@data/notion.yml';
       <div class="content-container flex flex-col items-center">
         <Title title="#GivingTuesday 2022" />
         <iframe
+          title="Donate to Honk Fest West"
           width="300"
           height="500"
           src="https://www.wagives.org/forms/honk-fest-west?id=ajcqcf&embed=donation_widget"
