--- a/src/pages/volunteer/housing-form.astro
+++ b/src/pages/volunteer/housing-form.astro
@@ -3,7 +3,12 @@ import BaseLayout from '@layouts/BaseLayout.astro';
 ---
 
 <BaseLayout title="New Volunteer Form">
-	<div class="content-container">
-		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd1tPgsMmZoPeJ0_YWgzciH0gDoJ7A6WRLPIIwfxERPWG1lKw/viewform?embedded=true" width="640" height="1800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-	</div>
+  <div class="content-container">
+    <iframe
+      title="New Volunteer Form"
+      src="https://docs.google.com/forms/d/e/1FAIpQLSd1tPgsMmZoPeJ0_YWgzciH0gDoJ7A6WRLPIIwfxERPWG1lKw/viewform?embedded=true"
+      width="640"
+      height="1800">Loading…</iframe
+    >
+  </div>
 </BaseLayout>
