--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,7 +6,7 @@
 :root {
   --colors-aqua: #00bfc9;
   --colors-pink: #ff7eba;
-  --colors-pink-lt: #ffa3ce;
+  --colors-pink-lt: #ffadd5;
   --colors-navy: #0078cd;
   --colors-cobalt: #1c4dab;
 }
