Home | Mardi Gras Fundraiser

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import { Image } from '@astrojs/image/components';
 import BaseLayout from '@layouts/BaseLayout.astro';
 import PostBlurb from '@components/post-blurb/PostBlurb.astro';
 import LinkBlurb from '@components/LinkBlurb.astro';
-import GivingTuesday from '@components/home/GivingTuesday.astro';
+import MardiGrasFundraiser from '@components/home/MardiGrasFundraiser.astro';
 
 import Title from '@components/Title.astro';
 import NewsletterForm from '@components/NewsletterForm.astro';
@@ -68,7 +68,7 @@ const postColumns = (index) => {
     }
 
     <section class="col-span-6 content-container sm:flex">
-      <GivingTuesday />
+      <MardiGrasFundraiser />
     </section>
 
     <!-- LINK BLURBS -->
