--- a/src/pages/donate/index.astro
+++ b/src/pages/donate/index.astro
@@ -49,7 +49,7 @@ import Notion from '@data/notion.yml';
         </div>
       </div>
       <div class="content-container flex flex-col items-center">
-        <Title title="#GivingTuesday 2022" />
+        <Title title="#GivingTuesday" />
         <iframe
           title="Donate to Honk Fest West"
           width="300"
