--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,9 +2,9 @@
 import SocialLinks from '@components/SocialLinks.astro';
 import { Image } from '@astrojs/image/components';
 import GoldenDino from './GoldenDino.svelte';
-import { footer_supporters } from '@lib/notion';
 
-import navigation from '@data/navigation.json';
+const { supporters, social } = Astro.props;
+
 ---
 
 <div class="bg-cobalt">
@@ -16,7 +16,7 @@ import navigation from '@data/navigation.json';
       <!-- SPONSORS -->
       <div class="flex flex-col items-center w-full mb-2 sm:mb-0">
         <div
-          class="flex flex-wrap justify-around align-center sm:w-3/4 items-center pt-3"
+          class="flex flex-wrap justify-around align-center items-center pt-3"
         >
           <span
             class="text-xs leading-tight w-1/5 text-gray-200 mr-6 text-justify text-opacity-80 pr-3"
@@ -25,7 +25,7 @@ import navigation from '@data/navigation.json';
             Arts and the WA State Arts Commission.
           </span>
           {
-            footer_supporters.map((supporter) => (
+            supporters.map((supporter) => (
               <div class="mx-2 mb-3">
                 <a
                   href="{ sponsor.link }"
@@ -62,9 +62,9 @@ import navigation from '@data/navigation.json';
       class="items-center h-full flex-1 w-full sm:w-1/3 m-1 sm:m-4 hidden sm:flex justify-around"
     >
       {
-        Object.keys(navigation.social).map((item) => (
+        Object.keys(social.links).map((key) => (
           <li class="text-cobalt">
-            <SocialLinks link={item} size="1.25rem" />
+            <SocialLinks key={key} link={social.links[key]} size="1.25rem" />
           </li>
         ))
       }
