--- a/src/components/base-head/BaseHead.astro
+++ b/src/components/base-head/BaseHead.astro
@@ -1,6 +1,6 @@
 ---
 import OpenGraph from './OpenGraph.astro';
-import NetlifyIdentity from './NetlifyIdentity.astro';
+import EventSchema from './EventSchema.astro';
 import '@styles/global.css';
 
 const { title = '' } = Astro.props;
@@ -14,7 +14,7 @@ const { title = '' } = Astro.props;
 />
 
 <OpenGraph />
-<!-- <NetlifyIdentity /> -->
+<EventSchema />
 
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 
