--- a/src/components/base-head/OpenGraph.astro
+++ b/src/components/base-head/OpenGraph.astro
@@ -10,7 +10,13 @@
 />
 <meta
   property="og:image"
-  content="https://ik.imagekit.io/thegoldendino/hfw/2023/OpenGraph_du37pbqDz.png?ik-sdk-version=javascript-1.4.3&updatedAt=1674584467015"
+  content="https://ik.imagekit.io/thegoldendino/hfw/2023/OpenGraph_du37pbqDz.png?updatedAt=1674584467015"
 />
+<meta property="og:image:alt" content="HONK! Fest West 2023" />
 <meta property="og:image:width" content="1200" />
 <meta property="og:image:height" content="628" />
+<meta property="og:site_name" content="HONK! Fest West" />
+<meta property="og:start_time" content="2023-06-02" />
+<meta property="og:end_time" content="2023-06-04" />
+<meta property="og:location:latitude" content="47.6129428" />
+<meta property="og:location:longitude" content="-122.4824895" />
