--- a/src/components/volunteer/OpenPositions.astro
+++ b/src/components/volunteer/OpenPositions.astro
@@ -1,38 +1,12 @@
 ---
-import { notion } from '@lib/notion';
 import BackToTop from '@components/BackToTop.astro';
 import Title from '@components/Title.astro';
-import Notion from '@data/notion.yml';
 
-const query = {
-  database_id: Notion.VOLUNTEER_POSITIONS,
-  filter: {
-    property: 'Open',
-    checkbox: {
-      equals: true,
-    },
-  },
-  sorts: [
-    {
-      property: 'Order',
-      direction: 'ascending',
-    },
-  ],
-};
-
-const positions = await notion.databases
-  .query(query)
-  .then((response) =>
-    response.results.map((res) => ({
-      title: res.properties['Title'].title[0].plain_text,
-      description: res.properties['Description'].rich_text[0].plain_text,
-    }))
-  )
-  .catch((err) => console.log(err));
+const {positions} = Astro.props;
 ---
 
 {
-  positions.map((position) => (
+  positions.open.map((position: {title:number, description:string}) => (
     <div class="content-container">
       <BackToTop />
       <Title title={position.title} />
