--- a/src/pages/media/index.astro
+++ b/src/pages/media/index.astro
@@ -4,18 +4,21 @@ import Title from '@components/Title.astro';
 import BackToTop from '@components/BackToTop.astro';
 import PhotosVideo from '@components/media/PhotosVideo.astro';
 import Articles from '@components/media/Articles.astro';
+import MarkdownContent from '@components/MarkdownContent.astro';
+import { rawContent as articles } from './_articles.md';
+import media from './_media.toml';
 ---
 
 <BaseLayout title="Media">
   <section class="content-container mb-4 sm:mb-6">
     <BackToTop />
     <Title title="Photos & Video" />
-    <PhotosVideo />
+    <PhotosVideo media={media} />
   </section>
 
   <section class="content-container mb-4 sm:mb-6">
     <BackToTop />
     <Title title="Articles" />
-    <Articles />
+    <MarkdownContent md={articles()} />
   </section>
 </BaseLayout>
