--- a/src/pages/portal/index.astro
+++ b/src/pages/portal/index.astro
@@ -1,5 +1,5 @@
 ---
-import FestivalCountDown from '../components/FestivalCountDown.svelte';
+import FestivalCountDown from '@components/FestivalCountDown.svelte';
 import '@styles/global.css';
 ---
 
