Head | Update Structured Data

--- a/src/components/base-head/OpenGraph.astro
+++ b/src/components/base-head/OpenGraph.astro
@@ -6,7 +6,7 @@
 <meta property="og:title" content="HONK! Fest West" />
 <meta
   property="og:description"
-  content="HONK! Fest West is an accessible community music festival driven by the energetic performances of street bands in public spaces."
+  content="HONK! Fest West is a three-day festival of street bands, parades, and community events in Seattle, Washington. The festival is a celebration of the power of music to bring people together and create positive change in the world. HONK! Fest West is a project of the HONK! Festival, a 501(c)(3) non-profit organization based in Somerville, Massachusetts."
 />
 <meta
   property="og:image"
