--- a/src/pages/supporters/index.astro
+++ b/src/pages/supporters/index.astro
@@ -67,8 +67,9 @@ import supporters from './_supporters.toml'
           <span>
             This project is supported in part by the
             <a href="{supporters.grant[0].url}">{supporters.grant[0].name}</a> the
-            <a href="{supporters.grant[1].url}">{supporters.grant[1].name}</a>, and
-            <a href="{supporters.grant[2].url}">{supporters.grant[2].name}</a>.
+            <a href="{supporters.grant[1].url}">{supporters.grant[1].name}</a>, 
+            <a href="{supporters.grant[2].url}">{supporters.grant[2].name}</a>, and
+            <a href="{supporters.grant[3].url}">{supporters.grant[3].name}</a>.
           </span>
           <span
             class="block grid grid-cols-2 gap-2 sm:gap-10 sm:flex-nowrap mt-2 sm:mb-5"
